# azcam-90prime

./: .gitignore  README.md  install.sh  pyproject.toml
azcam_90prime/: Galil_DMC_22x0_NgClient.py  Galil_DMC_22x0_Read_Telemetry.py  __init__.py  console.py  console_primefocus.py  css.py  detector_bok90prime.py  index_90prime.html  instrument_pf.py  instrument_pf_ngserver.py  instrument_pf_ngserver_1.py  pf.bat  pf.py  pf_commands.ps1  pf_start.py  primefocus.py  restart_cameraserver.py  server.py  server_primefocus.py  start.py  start_azcamtool.py  start_ipython.py  telescope_bok.py  test90p.py  test_90prime.py
docs/: install notes.txt
support/: 90prime.py  90prime.sh  environs.txt  install.py  parameters_monitor_90prime.ini  setup_time_sync.ps1  start_console_primefocus.bat  start_console_primefocus.py  start_console_venv1.bat  start_monitor_primefocus.bat  start_monitor_primefocus.py  start_server_primefocus_archon.bat  start_server_primefocus_archon.py  start_server_primefocus_css.bat  start_server_primefocus_css.py  start_server_primefocus_fast.bat  start_server_primefocus_fast.py  start_server_primefocus_menu.py  start_server_primefocus_normal.bat  start_server_primefocus_normal.py  start_server_primefocus_one.bat  start_server_primefocus_one.py  start_server_primefocus_overscan.bat  start_server_primefocus_overscan.py  start_server_venv1.bat
support/Desktop/: 90Prime Console.lnk  90prime Server.lnk  90prime archon.lnk  BCSpec.lnk  New 90prime Server.lnk  New 90prime console.lnk  SAOImage DS9.lnk  exp-status.lnk  observing scripts 90P.lnk
support/Desktop/old/: 90prime.lnk  BCSpec Console.lnk
support/datafolder/: 90prime_19nov24_gui.acf  90prime_working.acf
support/datafolder/parameters/: parameters_90prime_fast.ini  parameters_90prime_overscan.ini  parameters_console_90prime.ini  parameters_server_90prime_archon.ini  parameters_server_90prime_css.ini  parameters_server_90prime_fast.ini  parameters_server_90prime_normal.ini  parameters_server_90prime_one.ini  parameters_server_90prime_overscan.ini
support/datafolder/templates/: fits_template_90PrimeOne_master.txt  fits_template_90Prime_6k.txt  (+1 more)
support/dspcode/: readme.txt
support/ipython/: configure_LVM.py
support/parameters/: parameters_90prime_css.ini  parameters_90prime_normal.ini  parameters_90prime_one.ini  parameters_bok_monitor.ini  parameters_console_90prime.ini  parameters_server_90prime_6k.ini
support/startup/: 01-Run.py
support/templates/: fits_template_90Prime_6k.txt  fits_template_90Prime_css.txt
(+64 files in other folders)
