[tool.poetry]
name = "azcam-90prime"
version = "22.2"
description = "Azcam extension for Bok telescope 90prime facility camera"
authors = ["Michael Lesser <mlesser@arizona.edu>"]
license = "LICENSE"
readme = "README.md"
keywords=["ccd", "imaging", "astronomy", "sensors"]
repository = "https://github.com/mplesser/azcam-90prime/"
documentation = "https://mplesser.github.io/azcam/"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
ipython = "*"
rich = "*"
azcam = "*"
azcam-monitor = "*"
azcam-fastapi = "*"
azcam-arc = "*"
azcam-archon = "*"
azcam-cryocon = "*"
azcam-ds9 = "*"
azcam-focus = "*"
azcam-imageserver = "*"
azcam-observe = "*"
azcam-scripts = "*"
azcam-testers = "*"
azcam-webtools = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
