[project]
name = "azcam-90prime"
version = "22.2.1"
description = "Azcam extension for Bok telescope 90prime facility camera"
license = {file ="LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
keywords=["ccd", "imaging", "astronomy", "sensors"]
authors = [{name="Michael Lesser"},{email = "mlesser@arizona.edu"}]
dependencies = [
    "ipython",
    "rich",
    "azcam",
    "azcam-monitor",
    "azcam-fastapi",
    "azcam-arc",
    "azcam-archon",
    "azcam-cryocon",
    "azcam-ds9",
    "azcam-focus",
    "azcam-imageserver",
    "azcam-observe",
    "azcam-scripts",
    "azcam-testers",
    "azcam-webtools",
]

[project.urls]
Documentation = "https://mplesser.github.io/azcam/"
Repository = "https://github.com/mplesser/azcam-90prime/"

[project.scripts]
primefocus = "azcam_90prime.pf:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_90prime"