[project]
name = "azcam-90prime"
version = "22.4"
description = "Azcam extension for Bok telescope 90prime facility camera"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
dependencies = ["ipython", "rich", "azcam"]

[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam-90prime/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_90prime"
